【ch05】 5.5.6 finalize对GC的影响